--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:layout_height="match_parent">
         <ImageView
                 android:id="@+id/msx_image"
-                android:layout_width="189dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:minWidth="50dp"
                 android:maxWidth="50dp"
