--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,15 @@
             android:id="@+id/start_measurement"
             android:layout_marginBottom="16dp"
             android:layout_alignBottom="@+id/msx_image"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="130dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="130dp"/>
+            android:layout_marginStart="30dp"/>
+    <Button
+            android:text="@string/calibrate_text"
+            android:onClick="recalibrateBoundingBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/calibrate"
+            android:layout_marginBottom="16dp"
+            android:layout_alignBottom="@+id/msx_image" android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"/>
 
 </RelativeLayout>
